--- a/src/css/index/page-partials/hero.scss
+++ b/src/css/index/page-partials/hero.scss
@@ -128,6 +128,8 @@
 
     &__perf {
         user-select: none;
+        -webkit-user-select: none;
+        cursor: default;
         grid-column: 2/3;
         grid-row: 1/-1;
         display: grid;
